作业/9.13号/ingress-YAML文件/ingress-web02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress-web02
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.web02.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web02-svc
            port:
              number: 80
