作业/9.13号/ingress-YAML文件/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.web01.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web01-svc
            port:
              number: 80
